--- a/.github/workflows/issue-macro.yml
+++ b/.github/workflows/issue-macro.yml
@@ -13,8 +13,13 @@ on:
 jobs:
   create-issue:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Create GitHub Issue
         uses: peter-evans/create-issue@v4
         with:
